--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--ylävalikko-->
     <nav class="navigaatio-iso">
     <ul class="navigaatio-lista">
-      <li><a class="active" href="">Etusivu</a></li>
+      <li><a class="active" href="index.html">Etusivu</a></li>
       <li><a href="palvelut.html">Palvelut</a></li>
       <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
     </ul>
@@ -30,7 +30,7 @@
   <!--hampurilaisvalikko-->
   <nav class="navigaatio" id="navigaatio">
     <ul>
-      <li><a class="active" href="">Etusivu</a></li>
+      <li><a class="active" href="index.html">Etusivu</a></li>
       <li><a href="palvelut.html">Palvelut</a></li>
       <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
     </ul>
