--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <h1>Hei, olen digitaalisten palvelujen suunnittelija</h1>
         <p>Suunnittelen käyttäjälähtöisiä verkkosivustoja, palveluita ja käyttöliittymiä, jotka yhdistävät selkeän muotoilun ja toiminnallisuuden.</p>
       </div> 
+      <a href="palvelut.html">lue lisää palveluistani</a>
     </div>
     <hr>
     <div class="ala-content">
